trunk/Archive2/18/b2832c5315ede8/output
main.cpp:8:7: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
  for(auto s:words){
      ^
main.cpp:8:13: error: range-based for loop is a C++11 extension [-Werror,-Wc++11-extensions]
  for(auto s:words){
            ^
main.cpp:11:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
3 errors generated.
